# rust-hands-on-wiki

./: :  Gemfile  README.md  README2.md  ]  _config.yml
_data/: navigation.yml
_sass/: _config.yml  minima.scss
_sass/_data/: navigation.yml
_sass/_includes/: head.html
_sass/_posts/: 2022-03-11-homepage-dev-ops.md
_sass/minima/: _base.scss  _layout.scss  _syntax-highlighting.scss
client-side-integration/: Cargo.toml  README.md
client-side-integration/public/layouts/: edit.html  page.html
client-side-integration/src/: main.rs
contents-management-server/: Cargo.toml  README.md
contents-management-server/src/: main.rs
https-server/: Cargo.toml  README.md
simple-wiki-backend/: README.md  README2.md
simple-wiki-backend/src/: main.rs
static-file-server/: .gitignore  Cargo.toml  README.md  cert.pem  key.pem
